src/App.css
.app--background {
	background-color: var(--cor-fundo);
	height: 100svh;
	width: 100svw;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 2rem;
}

.app--column {
	width: 33svw;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 1rem;
	flex: 1;
	min-height: 0
}

.app--tela-inicial {
	justify-content: space-between;
	height: 100%;
}

.app--tela-inicial-content {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	flex: 1;
	gap: 3rem;
	width: 100%;
}

.app--logo-pse {
	width: 180px;
	margin-bottom: 1rem;
	object-fit: contain;
}

.app--header-container {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 1rem;
	width: 100%;
}

.app--header {
	text-align: center;
}

.app--header-logo {
	height: 1.5rem;
	object-fit: contain;
}

.app--card {
	background-color: var(--cor-frame);
	height: 100%;
	width: 100%;
	padding: 1rem;
	padding-top: 1.5rem;
	border-radius: 2rem;
	display: flex;
	flex-direction: column;
	gap: 1rem;
	flex: 1;
	overflow-y: auto;
}

.app--title {
	font-size: 2.5rem;
	font-weight: 600;
	line-height: 1.25em;
	margin-bottom: 0.25em;
}

.app--title__tela-inicial {
	text-align: center;
}

.app--date-group {
    display: flex;
    gap: 0.5rem;
}

.app--date-input {
    width: 4rem;
    padding: 0.75rem;
    border: var(--input-border);
    border-radius: 0.4rem;
    font-size: 1rem;
    outline: none;
    background-color: transparent;
	flex: 1;
}

.app--date-input:focus {
    border-color: var(--cor-texto);
}

.app--search-container {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	width: 100%;
	flex: 1;
}

.app--search-bar {
	display: flex;
	align-items: center;
	border: var(--input-border);
	border-radius: 2rem;
	padding: 0.75rem 1rem;
}

.login--background {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
  font-family: var(--fonte);
}


.login--header {
  background-color: white;
  height: 120px;
  display: flex;
  align-items: center;
  padding: 0 4rem;
  gap: 2rem;
}

.login--main {
  background-color: #69a3ff; 
  flex: 1; 
  display: flex;
  flex-direction: row; 
}

/*coluna da esquerda*/
.login--bemvindos {
  flex: 1;
  display: flex;
  flex-direction: column;	
  justify-content: center;
	padding: 0% 10% 10% 10%;
  color: rgb(0, 0, 0);
  width: 100%;
}

.login--bemvindos h1 {
font-size: 2.1rem;         
  font-weight: 700;          
  line-height: 1.3;          
  margin-bottom: 1rem;
  text-align: center;
}

.login--bemvindos p {
	font-size: 1.2rem;
	font-weight: 600;
	text-align: center;
	margin-bottom: 1rem;
}

.login--form-sessao {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.login--card {
  background-color: #f4f6f8;
  padding: 1.8rem;
  width: 100%;
  max-width: 400px;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  margin-bottom: 1rem;
}

.login--input-group {
  	display: flex;
  	flex-direction: column;
  	gap: inherit;
	margin: auto 0;
}

.login--esqueci-senha {
  color: #69a3ff;
  font-size: 0.85rem;
  cursor: pointer;          
}

.login--botao-cadastro {
  margin-top: 1.5rem;        
  background-color: #f4f6f8;
  color: #69a3ff;
  border: none;
  padding: 1rem;
  width: 100%;
  max-width: 400px;          
  font-size: 1rem;
  cursor: pointer;
}

.app--search-bar input {
	border: none;
	outline: none;
	background: transparent;
	width: 100%;
	font-size: 1rem;
}

.app--search-list {
	border: var(--input-border);
	border-radius: 1.5rem;
	padding: 1rem;
	display: flex;
	flex-direction: column;
	gap: 0rem;
	flex: 1;
}

.app--search-list--unidade {
	font-size: 1rem;
	cursor: pointer;
	display: flex;
	flex-direction: row;
	padding: 1rem 0rem;
	gap: 1rem;
	stroke-width: 0.1rem;
	align-items: center;
}

.app--list {
	display: flex;
	flex-direction: column;
	gap: 0rem;
}

.app--list--aluno-nascimento {
	display: flex;
	flex-direction: row;
	gap: 5rem;
	justify-content: space-between;
	align-items: center;
	width: 100%;
}

.app--list--aluno-nascimento--nascimento {
	color: var(--cor-botao2);
}

.app--list label {
    display: flex;
    align-items: center;
    gap: 1rem;
	font-size: 1rem;
	padding: 1rem 0rem;
	font-size: 1.25rem;
}

.app--footer {
	margin-top: auto;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 1rem;
}

.app--buttonMain {
	color: var(--cor-frame);
	background-color: var(--cor-botao);
	font-weight: 600;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 1rem;
	font-size: 1.5rem;
	border-radius: 2rem;
	cursor: pointer;
	text-align: center;
	width: 100%;
	transition: transform 0.1s ease;
	user-select: none;
}

.app--buttonMain:active {
	transform: scale(0.975);
}

.app--buttonSecondary {
	color: var(--cor-botao2);
	background-color: var(--cor-frame);
	font-weight: 500;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 0.5rem;
	font-size: 1rem;
	border-radius: 2rem;
	cursor: pointer;
	text-align: center;
	transition: transform 0.1s ease;
	user-select: none;
}

.app--buttonSecondary:active {
	transform: scale(0.95);
}

.app--buttonMain__disabled {
	color: var(--cor-frame);
	background-color: var(--cor-botao);
	font-weight: 600;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 1rem;
	font-size: 1.5rem;
	border-radius: 2rem;
	cursor: pointer;
	text-align: center;
	width: 100%;
	transition: transform 0.1s ease;
	opacity: 0.5;
	cursor: default;
}

.app--buttonMain:hover {
	filter: brightness(0.9);
}

.app--botao-voltar {
	flex-shrink: 0;
	transition: transform 0.1s ease;
	user-select: none;
}

.app--botao-voltar:hover {
	cursor: pointer;
}

.app--botao-voltar:active {
	transform: scale(0.8);
}

.app--contador {
	color: var(--cor-botao2);
}

.app--nomeAluno {
	font-size: 2.5rem;
	font-weight: 600;
	line-height: 1.25em;
	margin-bottom: 0.25em;
	text-align: center;
}

.app--input-group {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	width: 100%;
}

.app--input-group label {
	font-size: 1rem;
}

.app--input-group input {
	border: var(--input-border);
	border-radius: 0.5rem;
	padding: 0.75rem 1rem;
	font-size: 1rem;
	outline: none;
	background-color: transparent;
	width: 100%;
}

.app--dados-aluno--footer {
	margin-top: auto;
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 1rem;
}

.app--input-group input:focus {
	border-color: var(--cor-texto);
}

.app--progress-bar {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
}

.app--progress-step-container {
	display: flex;
	align-items: center;
	min-width: 0;
}

.app--progress-step {
	width: 24px;
	height: 24px;
	border-radius: 50%;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-shrink: 0;
	color: white;
	stroke-width: 0.15rem;
}

.app--progress-step.completed {
	background-color: var(--cor-step);
}

.app--progress-step.current {
	background-color: var(--cor-frame);
	border: 4px solid var(--cor-step);
	box-sizing: border-box;
}

.app--progress-step.pending {
	background-color: var(--cor-botao3);
}

.app--progress-line {
	height: 0.2rem;
	width: 2rem;
	flex-shrink: 1;
	min-width: 0;
}

.app--progress-line.completed {
	background-color: var(--cor-step);
}

.app--progress-line.pending {
	background-color: var(--cor-botao3);
}

@media (max-width: 1000px) {
  .app--column {
    width: 100%;
  }
  .app--background {
	padding: 1rem;
	padding-top: 2rem;
  }
}

